circt-bc260129-000015f7/origin/reproduce.log
source.sv:4:9: remark: Class builtin functions (needed for randomization, constraints, and covergroups) are not yet supported and will be dropped during lowering.
  class my_class;
        ^
source.sv:15:12: error: 'hw.bitcast' op result #0 must be Type wherein the bitwidth in hardware is known, but got '!llvm.ptr'
  my_class mc;
           ^
source.sv:15:12: note: see current operation: %15 = "hw.bitcast"(%14) : (i1073741823) -> !llvm.ptr
